--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+
+###########################
+# Project ignored files
+###########################
+
+# App generated files
+public/app/*
+public/js/*
+public/css/style.min.css
+*.old
+typings/
+
+# MACOS
+.DS_Store
+
+app/backend/**/*.js
+app/backend/**/*.js.map
+
+apidoc/*
+public/css/style.css
